Add import chunk
